--- a/index.html
+++ b/index.html
@@ -1,11 +1,97 @@
 <DOCTYPE html>
-	<!DOCTYPE html>
-	<html>
-	<head>
-		
-		<title>Discover Greece</title>
-	</head>
-	<body>
-	
-	</body>
-	</html>
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <title>Discover Greece</title>
+    </head>
+    <header class="header">
+      <link rel="stylesheet" href="style.css" />
+      <link rel="stylesheet" href="reset.css" />
+
+      <img style="margin-left: 99px" src="images/owl.png" />
+
+      <p class="home">HOME</p>
+
+      <p class="abt-us">ABOUT US</p>
+
+      <p class="services">OUR SERVICES</p>
+
+      <p class="package">TOUR PACKAGE</p>
+    </header>
+
+    <body>
+      <section class="Discover">
+        <img class="dg" src="images/dg.png" />
+        <div class="center">
+          <p class="DG">Discover Greece</p>
+          <p class="travel">TRAVEL WITH UNIQUE EXPERIENCE</p>
+        </div>
+      </section >
+<div class="cont1">
+      <div class="d1">
+        <p class="b">DISCOVER</p>
+        <p class="bb">Our Hot Services</p>
+        <p class="bbb">
+          We hope you can visit and ths beautiful places with your friend and
+          favorite So you can share your feedback to us
+        </p>
+      </div>
+
+      <div class="d2">
+        <img src="images/mg1.png" alt="mg1.png" />
+        <p class="bd">FLIGHT BOOKING</p>
+        <p class="bs">
+          We hope you can visit and enjoy it ths beautiful places with your
+          friend and favorite people
+        </p>
+      </div>
+
+      <div class="d3">
+        <img src="images/mg2.png" alt="mg2.png" />
+        <p class="bd">HOTEL & RESORT BOOKING</p>
+        <p class="bs">
+          We hope you can visit and enjoy it ths beautiful places with your
+          friend and favorite people
+        </p>
+      </div>
+
+      <div class="d4">
+        <img src="images/mg3.png" alt="mg3.png" />
+        <p class="bd">FAMILY TRIP PLANNER</p>
+        <p class="bs">
+          We hope you can visit and enjoy it ths beautiful places with your
+          friend and favorite people
+        </p>
+      </div>
+</div>
+<div class="cont2">
+      <div class="d5">
+        <img src="images/mg4.png" alt="mg4.png" />
+        <p class="bd">CRUISE TOUR</p>
+        <p class="bs">
+          We hope you can visit and enjoy it ths beautiful places with your
+          friend and favorite people
+        </p>
+      </div>
+
+      <div class="d6">
+        <img src="images/mg5.png" alt="mg5.png" />
+        <p class="bd">FIRE CAMP</p>
+        <p class="bs">
+          We hope you can visit and enjoy it ths beautiful places with your
+          friend and favorite people
+        </p>
+      </div>
+
+      <div class="d7">
+        <img src="images/mg6.png" alt="mg6.png" />
+        <p class="bd">CORPORATE HOLYDAYS</p>
+        <p class="bs">
+          hope you can visit and enjoy it ths beautiful places with your friend
+          and favorite people
+        </p>
+      </div> 
+	 </div>
+    </body>
+  </html></DOCTYPE
+>
